--- a/helloWorldApp/Dockerfile
+++ b/helloWorldApp/Dockerfile
@@ -4,4 +4,5 @@ LABEL description="Docker Nodejs HelloWorldApp"
 RUN mkdir -p /root/helloworldapp
 WORKDIR /root/helloworldapp
 COPY . /root/helloworldapp
+RUN npm install
 ENTRYPOINT ["npm", "start"]
