--- a/helloWorldApp/Dockerfile-for-DockerService
+++ b/helloWorldApp/Dockerfile-for-DockerService
@@ -4,6 +4,7 @@ LABEL description="DockerSwarm-Nodejs-HelloWorldApp"
 RUN mkdir -p /root/helloworldapp
 WORKDIR /root/helloworldapp
 COPY . /root/helloworldapp
+RUN npm install
 ENV MOCK_PORT 8530
 EXPOSE 8530
 ENTRYPOINT ["npm", "start"]
